# jetbrains_intership_task_solution

./: Cargo.toml  README.md  server.py
core_crate/: Cargo.toml
core_crate/src/: chunk.rs  chunk_node.rs  core.rs  lib.rs  tests.rs
data_manager/: Cargo.toml
data_manager/src/: data_holder.rs  lib.rs  manager.rs  manager_wrapper.rs  server_simulator.rs  tests.rs
http_message/: Cargo.toml
http_message/src/: http_messages.rs  lib.rs
interval_list/: Cargo.toml
interval_list/src/: chunk.rs  core.rs  lib.rs  tests.rs
my_hex/: Cargo.toml
my_hex/src/: lib.rs
server_communicator/: Cargo.toml
server_communicator/src/: lib.rs
src/: app.rs  client.rs  http_messages.rs  main.rs  managers.rs  real_manager_wrapper.rs  serealize.rs  simple_solution.rs
tests/: mod.rs  test_utils.rs
